<resources>
    <string name="app_name">BottleBattle</string>
    <string name="welcome_message">Welcome to:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_via_google">Sign in with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="the_app_s_logo">the app\'s logo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="personal_information">Personal Information:</string>
    <string name="account_information">Account Information:</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="profile_picture">Profile picture (optional):</string>
    <string name="submit">submit</string>
    <string name="location">Location:</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="please_confirm">Please confirm your password</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="empty_country">Please select your country from the dropdown menu</string>
    <string name="empty_city">Please select your city from the dropdown menu</string>
    <string name="web_client_id">792970197952-9crnit0o86827pgo894apmfap9g79paq.apps.googleusercontent.com</string>
    <string name="please_provide_credentials">Please provide both your username and password</string>
    <string name="home">Home</string>
    <string name="hello">Hello</string>
    <string name="so_far_you_ve_saved_through_recycling">So Far You\'ve Saved\nThrough Recycling:</string>
    <string name="top_ranks">Top Ranks:</string>
    <string name="in_your_country">In Your Country</string>
    <string name="in_your_city">In Your City</string>
    <string name="with_your_friends">With Your Friends</string>
    <string name="ranks">Ranks:</string>
    <string name="add_a_recycled_item">Add a Recycled Item</string>
    <string name="user_rankings">User Rankings</string>
    <string name="see_your_progress">See Your Progress</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="add_friends">Add Friends</string>
    <string name="ranks_logo">ranks logo</string>
    <string name="coins_logo">coins logo</string>
    <string name="email">Email</string>
    <string name="wrong_email">Please enter a valid email</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="continueTXT">Continue</string>
    <string name="choose_your_city">Choose Your City</string>
    <string name="get_city_welcome_message">Before you dive in, please select your city to get started. Let\'s make recycling fun and impactful together!</string>
    <string name="updating">updating…</string>
    <string name="overall">Overall</string>
    <string name="your_status">Your Status:</string>
    <string name="current_level">Current Level:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="recover_password_text">To recover your password,\n please enter your username below:</string>
    <string name="username_not_found">Username not found</string>
    <string name="password_reset_text">We have sent a token to your email.\n Please enter the token and your new password below to recover your account.</string>
    <string name="new_password">New Password</string>
    <string name="token_required_message">Please enter the token sent to your email</string>
    <string name="new_pass_required_message">Please enter your new password</string>
    <string name="by_product_name_or_barcode">By Product Name or Barcode:</string>
    <string name="enter_product_name_or_picture_its_barcode">Enter Product Name or Picture its Barcode</string>
    <string name="by_category">By Category:</string>
    <string name="plastic_bottle">Plastic Bottle</string>
    <string name="glass_bottle">Glass Bottle</string>
    <string name="carton_box">Carton Box</string>
    <string name="papers">Papers</string>
    <string name="capacity">Capacity</string>
    <string name="quantity">Quantity: </string>
    <string name="or">Or</string>
    <string name="units_of_measurement">Units of Measurement</string>
    <string name="size_quantity">Size, Quantity, …</string>
    <string name="an_error_occurred_please_try_again_later">An error occurred, please try again later.</string>
    <string name="plastic_bottle_750ml">Plastic Bottle (750ml)</string>
    <string name="plastic_bottle_1_5l">Plastic Bottle (1.5L)</string>
    <string name="plastic_bottle_2_0l">Plastic Bottle (2.0L)</string>
    <string name="recycled_item_added_successfully">Recycled Item\nAdded Successfully!</string>
    <string name="current_points">Current Points:</string>
    <string name="suitable_recycle_bin">Suitable Recycle Bin:</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="cardboardRecyclingContainer">Cardboard Recycling Container</string>
    <string name="refundable">This item is refundable!</string>
    <string name="not_recyclable_item">Unfortunately this item isn\'t recyclable,\nso it belongs in the regular green bin.</string>
    <string name="greate_news">We Have Great News:</string>
    <string name="see_your_stats">See Your Stats</string>
    <string name="recyclers_rankings_in_your">Recyclers Rankings In Your:</string>
    <string name="user">User</string>
    <string name="points">Points</string>
    <string name="top_3">Top 3:</string>
    <string name="friends_group">Friends Group</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="_1st">1st</string>
    <string name="estimated_amount_of_plastic_recycled">Estimated Amount\n of Plastic Recycled</string>
    <string name="user_statistics">User Statistics</string>
    <string name="your_current_stats">Your Current Stats:</string>
    <string name="colon">:</string>
    <string name="last_time_you_recycled_an_item">Last Time You\n Recycled an Item</string>
    <string name="points_gained_n_so_far">Points Gained\n So Far</string>
    <string name="your_current_level">Your Current Level</string>
    <string name="money_saved_n_through_recycling">Money Saved\n Through Recycling</string>
    <string name="expand_your_network">Expand Your Network</string>
    <string name="this_is_the_place_to_add_new_recyclers_to_your_friends_list">This is the place to add new recyclers to your friends list!</string>
    <string name="recycler_username">Recycler Username</string>
    <string name="add_as_a_friend">Add as a Friend</string>
    <string name="add">Add</string>
    <string name="change_your_profile_picture">Change Your Profile Picture:</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="change_password">Change</string>
    <string name="update_your_city">Update Your City:</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="delete_your_account">Delete Your Account</string>
    <string name="deletion_instruction">To delete your account, long-press the button below.</string>
    <string name="update">Update</string>
    <string name="delete_caps">DELETE</string>
    <string name="city_update_success">City updated successfully</string>
    <string name="profilePic_update_success">Profile picture updated successfully</string>
    <string name="level_progress">Level Progress</string>
    <string name="novice_recycler">Novice\nRecycler</string>
    <string name="intermediate_recycler">Intermediate\nRecycler</string>
    <string name="expert_recycler">Expert\nRecycler</string>
    <string name="recycling_wizard">Recycling\nWizard</string>
    <string name="recycling_master">Recycling\nMaster</string>
    <string name="you_are_here">You are here</string>
</resources>