<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bottlebattle.bottlebattle.Activities.LoginActivity"
    android:background="@drawable/ic_bottle_battle_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

            <TextView
                android:id="@+id/welcomeMsg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/welcome_message"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="35dp"
            android:scaleX="2.5"
            android:scaleY="2.5"
            android:src="@mipmap/ic_bottle_battle_no_background_foreground"
            android:contentDescription="@string/the_app_s_logo" />
        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:textColor="#E53935"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:hint="@string/username"
            android:autofillHints="The username"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:inputType="textFilter"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="The password"/>
        <Button
            android:id="@+id/forgotPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            android:gravity="top"
            android:paddingTop="10dp"
            android:textAllCaps="false"
            android:text="@string/forgot_password"/>
        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            />

        <LinearLayout
            android:id="@+id/googleSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/round_button2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="41dp"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:src="@mipmap/ic_google_round"
                android:contentDescription="@string/sign_in_via_google" />

            <Button
                android:id="@+id/googleBtn"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/sign_in_via_google"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

            <TextView
                android:id="@+id/registerTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>