<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bottle_battle_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/accountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/accountInfoTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/account_information" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:autofillHints="The username"
                android:hint="@string/username"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                android:inputType="textFilter"/>

            <TextView
                android:id="@+id/usernameFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:textColor="#E53935"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:autofillHints="The password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/passwordFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_gravity="end"
                android:textColor="#E53935"/>

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:autofillHints="@string/confirm_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
            <TextView
                android:id="@+id/confirmPasswordFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_gravity="end"
                android:textColor="#E53935"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:autofillHints="Email"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
            <TextView
                android:id="@+id/emailFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_gravity="end"
                android:textColor="#E53935"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/locationTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/location" />

            <AutoCompleteTextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:autofillHints="City"
                android:hint="@string/city"
                android:inputType="textPhonetic"/>

            <TextView
                android:id="@+id/cityFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_gravity="end"
                android:textColor="#E53935"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profilePicTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/profile_picture" />

            <TextView
                android:id="@+id/privacyPolicyNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="Note that choosing a profile picture is optional, and may be seen by others in the leaderboards." />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_pfp"/>

            <TextView
                android:id="@+id/profilePicFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#E53935" />
        </LinearLayout>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@drawable/round_button"/>
        <TextView
            android:id="@+id/createUserFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="#E53935"/>
    </LinearLayout>
</ScrollView>
