<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bottlebattle.bottlebattle.Activities.GetCityActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#393939"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/get_city_welcome_message"
            android:gravity="center"
            android:textSize="20sp" />

        <AutoCompleteTextView
            android:id="@+id/city2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="City"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/choose_your_city"
            android:inputType="textPhonetic" />
        <Button
            android:id="@+id/submitCityBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continueTXT"
            android:textAllCaps="false"
            android:enabled="false"
            android:textColor="@color/white"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_button_disabled"/>
        <TextView
            android:id="@+id/updateTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updating"
            android:textColor="#737373"
            android:gravity="center"
            android:textSize="17sp"
            android:visibility="invisible"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>