<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bottlebattle.bottlebattle.Activities.ForgotPasswordActivities.ForgotPasswordActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/recoverPassTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recover_password_text"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/usernameFP"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:hint="@string/username"
            android:autofillHints="The username"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:inputType="textFilter"/>
        <TextView
            android:id="@+id/usernameFP_Feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:textColor="#E53935"/>
        <Button
            android:id="@+id/submitUsernameBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continueTXT"
            android:textAllCaps="false"
            android:enabled="false"
            android:textColor="@color/white"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_button_disabled"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>