<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.bottlebattle.bottlebattle.Activities.ItemRecycledActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/successMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="63dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/status_success_svg" />

            <TextView
                android:id="@+id/successMessageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/recycled_item_added_successfully"
                android:textSize="25sp" />
        </LinearLayout>


        <ScrollView
            android:id="@+id/notesSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/notes_bg"
            android:visibility="gone">
            <TextView
                android:id="@+id/notesTV"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:lineSpacingExtra="5sp"/>
        </ScrollView>

        <TextView
            android:id="@+id/suitableRecycleBinTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/suitable_recycle_bin"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/recycleBinIV"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/recycle_bin_orange" />

            <TextView
                android:id="@+id/recycleBinColorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/recycle_bin_orange"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/alternativeTV"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="5sp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/continueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:layout_marginTop="10dp"
            android:text="@string/continueTXT"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/itemRecycledProgressBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background"
        android:indeterminate="true"
        android:indeterminateTint="@color/loading_circle"
        android:padding="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>